<resources>
    <string name="app_name">CovidCases</string>
    <string name="deaths">Deaths</string>
    <string name="recovered">Recovered</string>
    <string name="total_cases">Total Cases</string>
    <string name="country">COUNTRY</string>
    <string name="total_case">TOTAL CASES</string>
    <string name="death">DEATHS</string>
    <string name="recover">RECOVERED</string>
    <string name="clear_sort">Clear SORT</string>
    <string name="total_recover_by_desc_order">Total Recover By Desc Order</string>
    <string name="total_recover_by_asc_order">Total Recover By Asc Order</string>
    <string name="death_by_desc_order">Death By Desc Order</string>
    <string name="death_by_asc_order">Death By Asc Order</string>
    <string name="total_cases_by_desc_order">Total Cases By Desc Order</string>
    <string name="total_cases_by_asc_order">Total Cases By Asc Order</string>
    <string name="country_by_desc_order">Country By Desc Order</string>
    <string name="country_by_asc_order">Country By Asc Order</string>
    <string name="filters">FILTERS</string>
    <string name="cancel">cancel</string>
    <string name="total_cases_grt"><![CDATA[Total cases >=]]></string>
    <string name="total_cases_less"><![CDATA[Total cases <=]]></string>
    <string name="total_death_less"><![CDATA[Total Death <=]]></string>
    <string name="total_death_grt"><![CDATA[Total Death >=]]></string>
    <string name="filter_data">Filter Data</string>
    <string name="total_recovered_less"><![CDATA[Total Recovered <=]]></string>
    <string name="total_recovered_grt"><![CDATA[Total Recovered >=]]></string>
    <string name="clear">CLEAR</string>
    <string name="done">DONE</string>
</resources>
