<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.MainActivity">

    <!--Toolbar Code-->
    <LinearLayout
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0077B5"
        android:weightSum="2"
        android:theme="@style/ToolBarTheme">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_weight="1.3"
            android:gravity="start"
            android:text="@string/app_name"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/select_filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="0.7"
            android:background="@drawable/spinner_bg"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:text="@string/filters"
                android:textColor="@color/Red"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="COVID-19 Cases Overview"
                android:textSize="20sp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SORT BY"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/border_line"
                android:textSize="20sp"
                android:layout_margin="8dp"
                android:textColor="#000000"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                android:layout_marginEnd="8dp"
                app:cardBackgroundColor="@color/Red"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="68dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:text="@string/total_cases"
                        android:textColor="#FFFFFF"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/lightGrey" />

                    <TextView
                        android:id="@+id/confirm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textColor="#FFFFFF"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                android:layout_marginEnd="8dp"
                app:cardBackgroundColor="@color/green_color"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/deaths"
                        android:textSize="15sp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:layout_marginBottom="8dp"
                        android:textColor="#FFFFFF"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/lightGrey"/>

                    <TextView
                        android:id="@+id/death"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"
                        android:textColor="#FFFFFF"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                android:layout_marginEnd="8dp"
                app:cardBackgroundColor="@color/design_default_color_primary"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recovered"
                        android:textSize="15sp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:layout_marginBottom="8dp"
                        android:textColor="#FFFFFF"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/lightGrey"/>

                    <TextView
                        android:id="@+id/recover"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"
                        android:textColor="#FFFFFF"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"/>

    <LinearLayout
        android:id="@+id/filter_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        android:background="@drawable/border_line"
        android:visibility="gone">

        <TextView
            android:id="@+id/filter_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"

            android:paddingStart="15dp"
            android:paddingEnd="0dp"
            android:text="@string/filter_data"
            android:textColor="#11BAC4"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/clear_filter"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_gravity="center"

            android:clickable="true"
            android:contentDescription="@string/cancel"
            android:focusable="true"
            android:src="@drawable/cancel_green" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="8dp"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/country"
                    android:gravity="center"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/total_case"
                    android:gravity="center"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/death"
                    android:gravity="center"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/recover"
                    android:gravity="center"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#979797"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/country_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>